# The-Watcher

./: .gitignore  CLAUDE.md  TODOS.md  setup_env.ps1
pencil/: pencil-new.pen
project/: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt  run.ps1  run_dev.ps1
project/.github/instructions/: adapters.instructions.md
project/app/: __init__.py  main.py
project/app/core/: auto_event_service.py  cloud_share_service.py  disk_monitor.py  event_service.py  policy.py  role.py
project/app/infrastructure/: autostart.py  config.py  launch_target.py  logging_setup.py  relaunch.py  (+1 more)
project/docs/: operator-policy-manual-checklist.md
project/installer/: Setup.bat  The Watcher.iss  The Watcher.spec  build.ps1  install.ps1
project/logs/: .gitkeep
project/native/watcher_segments/: .gitignore  Cargo.toml  README.md  pyproject.toml
project/native/watcher_segments/src/: lib.rs
project/prototype/: Main.qml  run.py
project/tests/: conftest.py  qml_runtime_smoke.py  qml_smoke.py  test_analytics_models.py  test_app_bridge_nas.py  test_app_bridge_onedrive.py  test_auto_event_service.py  test_buffer_manager.py  test_clip_builder.py  test_cloud_share_service.py  test_disk_monitor.py  test_editor_bridge.py  test_editor_export.py  test_editor_models.py  test_editor_sequencer.py  test_encoder_selector.py  test_event_service.py  test_event_store.py  test_launch_target.py  test_local_share_adapter.py  test_manual_event.py  test_native_segment_compiler.py  test_parity_segment_compiler.py  test_policy.py  test_relaunch.py  test_requests.py  test_role.py  test_scheduled_task.py  test_segment_compiler.py  test_segment_index.py  test_settings_bridge.py  test_sidecar.py  test_supervisor.py  test_ws_inbound.py  test_ws_outbound.py
project/tools/: build_supervisor_test.ps1  supervisor_test.py
(+159 files in other folders)
